--- a/web/login/index.html
+++ b/web/login/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;URL='https://accounts.spotify.com/authorize?client_id=05b40c70078a429fa40ab0f9ccb485de&response_type=code&redirect_uri=http%3A%2F%2Flocalhost:8000%2Fcallback%2F&scope=playlist-read-private%20user-read-private'" />
+<meta http-equiv="refresh" content="0;URL='https://accounts.spotify.com/authorize?client_id=05b40c70078a429fa40ab0f9ccb485de&response_type=code&redirect_uri=http%3A%2F%2Flocalhost:8000%2Fcallback%2F&scope=playlist-read-private%20user-read-currently-playin'" />
