--- a/callback/index.html
+++ b/callback/index.html
@@ -1,9 +1,8 @@
-<script language="javascript" type="text/javascript"> 
-
-function closeWindow() { 
-    window.open('','_parent',''); 
-    window.close(); 
-} 
+<script language="javascript" type="text/javascript">
+function closeWindow() {
+window.open('','_parent','');
+window.close();
+}
 </script>
 
 <head>
@@ -14,6 +13,8 @@ You can now close the browser again.
 <br><br>
 <meta http-equiv="refresh" content="4; URL='http://localhost:8000'" />
 Thanks.
+<br>
+<a href="javascript:closeWindow();">Close Window</a>
 </html>
 
 
