--- a/callback/index.html
+++ b/callback/index.html
@@ -5,6 +5,9 @@ window.close();
 }
 </script>
 
+<script language="javascript" type="text/javascript">
+setTimeout(function() { self.closeWindow();}, 2000);
+</script>
 <head>
 <html>
 <body>
