--- a/tidal_web/index.html
+++ b/tidal_web/index.html
@@ -32,7 +32,7 @@ function loginStage1(username) {
                 <td></td>
                 <td>client_id:</td>
                 <td></td>
-                <td><input type="text" name="token" default="work01" id="token" class="login"></td>
+                <td><input type="text" name="token" value="GvFhCVAYp3n43EN3" id="token" class="login"></td>
                 <td></td>
         </tr>
         <tr class="space"><td colspan="5"></td></tr>
